[gd_scene load_steps=3 format=3 uid="uid://fire_menu001"]

[ext_resource type="Script" path="res://scripts/ui/fire_menu.gd" id="1_fire_menu"]
[ext_resource type="Font" uid="uid://hud_mono_font" path="res://resources/hud_font.tres" id="2_font"]

[node name="FireMenu" type="CanvasLayer"]
layer = 10
script = ExtResource("1_fire_menu")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -300.0
offset_right = 320.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.3, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 56
text = "Fire Pit"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="WarmUpButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 40
text = "Warm Up (+15 Health)"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CookButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 40
text = "Cook Food"

[node name="CookLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "No cookable food available"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="AddFuelButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 40
text = "Add Fuel (Branch)"

[node name="FuelLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Extends fire duration"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36
text = "Close [E]"
